--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.1",
-    "react-router": "^6.14.1"
+    "react-router": "^6.14.1",
+    "robportfolio": "file:"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
