--- a/package.json
+++ b/package.json
@@ -10,13 +10,19 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@radix-ui/react-slot": "^1.2.3",
     "@tailwindcss/vite": "^4.1.11",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "embla-carousel-react": "^8.6.0",
     "firebase": "^10.12.2",
+    "lucide-react": "^0.525.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.1",
     "react-router": "^6.14.1",
-    "robportfolio": "file:"
+    "robportfolio": "file:",
+    "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
     "@types/node": "^24.0.12",
@@ -31,6 +37,7 @@
     "postcss": "^8.5.6",
     "react-router-dom": "^6.14.1",
     "tailwindcss": "^4.1.11",
+    "tw-animate-css": "^1.3.5",
     "typescript": "^5.8.3",
     "vite": "^7.0.4"
   }
